--- a/src/components/project-details/project-details.scss
+++ b/src/components/project-details/project-details.scss
@@ -1,76 +1,6 @@
 @use "@/global-styles/variables.scss" as *;
 @use "@/global-styles/shared-styles.scss" as *;
 
-.project-details {
-   position: fixed;
-   width: 100%;
-   height: 100%;
-   top: 0px;
-   left: 0px;
-   right: 0px;
-   bottom: 0px;
-   z-index: 1000;
-   opacity: 0;
-   pointer-events: none;
-   touch-action: none;
-   transition: opacity 0.3s ease-in-out;
-}
-.project-details.modal-active {
-   opacity: 1;
-   pointer-events: all;
-   touch-action: all;
-}
-.project-details__layer {
-   position: fixed;
-   inset: 0;
-   width: 100%;
-   height: 100%;
-   opacity: 0.5;
-   background: rgba(0, 0, 0, 0.5);
-   border: 1px solid green;
-   z-index: -1;
-}
-.project-details__inner-wrapper {
-   position: absolute;
-   inset: 0;
-   width: 100%;
-   min-height: 100%;
-   height: 100%;
-   overflow-x: hidden;
-   overflow-y: scroll;
-}
-.project-details__content-wrapper-outer {
-   width: 100%;
-   position: relative;
-   @include flex-layout(row, none, center, none);
-}
-.project-details__modal-close-trigger {
-   position: absolute;
-   inset: 0;
-}
-.project-details__content-wrapper {
-   margin-top: max(20vh, 200px);
-   padding-bottom: 50px;
-   width: clamp(1200px, calc(100% - 100px), 1500px);
-   position: relative;
-   transform: translateY(100%);
-   @include max-breakpoint("md") {
-      margin-top: max(10vh, 100px);
-      width: calc(100% - 60px);
-      border-radius: 40px 40px 0px 0px;
-   }
-   @include max-breakpoint("s") {
-      width: calc(100% - 40px);
-      border-radius: 40px 40px 0px 0px;
-   }
-}
-.project-details__content-bg {
-   background-color: $secondary-tint;
-   position: absolute;
-   inset: 0;
-   border-radius: 60px 60px 0px 0px;
-   z-index: -1;
-}
 .project-details__content {
    width: 100%;
    min-height: 100vh;
